deploy/mighty-fine/mf-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mf
  namespace: dev
  annotations:
    flux.weave.works/tag.podinfod: glob:*
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mf
  template:
    metadata:
      labels:
        app: mf
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: mf
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /ready
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
